namespace-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: form-k8s-dev
  labels:
    env: dev
