backend-deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: form-k8s-dev
  labels:
    app: back-training-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-training-app
  template:
    metadata:
      labels:
        app: back-training-app
    spec:
      containers:
      - name: backend
        image: axelpereira/k8s-training-test-app-back:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      restartPolicy: Always
