frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-training-app
  template:
    metadata:
      labels:
        app: front-training-app
    spec:
      containers:
      - name: frontend
        image: axelpereira/k8s-training-test-app-front:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
