backend-service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: back-training-app
  namespace: form-k8s-dev
spec:
  selector:
    app: back-training-app
  ports:
  - port: 80
    targetPort: 5000
