backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-training-app
spec:
  selector:
    app: back-training-app
  ports:
  - port: 80
    targetPort: 5000
