frontend-service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: front-training-app
  namespace: form-k8s-dev
spec:
  selector:
    app: front-training-app
  ports:
  - port: 80
    targetPort: 80
