frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-training-app
spec:
  selector:
    app: front-training-app
  ports:
  - port: 80
    targetPort: 80
