mongo-service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: form-k8s-dev
spec:
  type: NodePort
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
